tests/fixtures/guardrails/valid/app/routes/service-namespace-member-call.ts
import * as productsService from "~/app/services/health.server";

export const loader = async () => productsService.loadHealthCheck();
