tests/fixtures/guardrails/invalid/route-inline-typed-assigned-imported-binding-bypass/app/routes/products.ts
/* eslint-disable no-unused-vars */
import { delegatedAction, delegatedLoader } from "~/app/lib/delegated-loader";

type LoaderArgs = { request: Request };
type ActionArgs = { request: Request };

export const loader: (args: LoaderArgs) => Promise<Response> = delegatedLoader;
export const action: (args: ActionArgs) => Promise<Response> = delegatedAction as (
  args: ActionArgs
) => Promise<Response>;
